<resources>
    <string name="app_name">NoteApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_edit_note">Edit Notes</string>
    <string name="menu_create_note">Create Note</string>
    <string name="title">Title</string>
    <string name="description">Content</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
</resources>