<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.noteapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_createNoteFragment"
            app:destination="@id/nav_CreateNote" />
        <action
            android:id="@+id/action_nav_home_to_nav_editNote"
            app:destination="@id/nav_editNote" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.noteapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_editNote"
        android:name="com.example.noteapp.ui.editNote.EditNoteFragment"
        android:label="@string/menu_edit_note"
        tools:layout="@layout/fragment_edit_note" >

        <action
            android:id="@+id/action_nav_editNote_to_nav_home"
            app:destination="@id/nav_home" />

    </fragment>
    <fragment
        android:id="@+id/nav_CreateNote"
        android:name="com.example.noteapp.ui.createNote.CreateNoteFragment"
        android:label="@string/menu_create_note"
        tools:layout="@layout/create_note_fragment" >
        <action
            android:id="@+id/action_createNoteFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>